# pw24-gendata

./: Cargo.toml  LICENCE.md  README.md  gi_comuni.csv  gi_comuni_edit.txt  gi_province-comuni.csv  gi_province.csv  gi_regioni-province.csv  gi_regioni.csv
src/: main.rs
