[package]
name = "pw24-gendata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
fake = { version = "2.9.2", features = ["derive", "chrono", "time"] }
rand = "0.8.5"
serde = { version = "1.0.199", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
